# carto2

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile.melodic  Dockerfile.noetic  README.rst  azure-pipelines.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci-jammy.yaml
cartographer/: CMakeLists.txt
cartographer/cartographer/cloud/: map_builder_server_interface.cc  map_builder_server_interface.h  map_builder_server_main.cc  map_builder_server_options.cc  map_builder_server_options.h
cartographer/cartographer/cloud/client/: map_builder_stub.cc  map_builder_stub.h
cartographer/cartographer/cloud/internal/: client_server_test.cc  local_trajectory_uploader.cc  local_trajectory_uploader.h  local_trajectory_uploader_test.cc  map_builder_context_impl.cc  map_builder_context_impl.h  map_builder_context_interface.h  map_builder_server.cc  map_builder_server.h
cartographer/cartographer/common/internal/: ceres_solver_options.cc  ceres_solver_options.h
cartographer/cartographer/ground_truth/: autogenerate_ground_truth.cc  autogenerate_ground_truth.h  autogenerate_ground_truth_main.cc  compute_relations_metrics_main.cc  relations_text_file.cc  relations_text_file.h
cartographer/cartographer/io/: draw_trajectories.cc  draw_trajectories.h  hybrid_grid_points_processor.cc  hybrid_grid_points_processor.h  points_processor_pipeline_builder.cc  points_processor_pipeline_builder.h  probability_grid_points_processor.cc  probability_grid_points_processor.h  probability_grid_points_processor_test.cc  proto_stream_deserializer.cc  proto_stream_deserializer.h  proto_stream_deserializer_test.cc  proto_stream_test.cc  serialization_format_migration.cc  serialization_format_migration.h  serialization_format_migration_test.cc  submap_painter.cc  submap_painter.h  xray_points_processor.cc  xray_points_processor.h
cartographer/cartographer/io/internal/: in_memory_proto_stream_test.cc  mapping_state_serialization.cc  mapping_state_serialization.h  pbstream_info.cc
cartographer/cartographer/mapping/: detect_floors.cc  detect_floors.h  id.h  map_builder.cc  map_builder.h  map_builder_interface.cc  map_builder_interface.h  map_builder_test.cc  pose_extrapolator_interface.cc  pose_extrapolator_interface.h  pose_graph.cc  pose_graph.h  pose_graph_interface.h  pose_graph_test.cc  range_data_inserter_interface.cc  range_data_inserter_interface.h  submaps.h  trajectory_builder_interface.cc  trajectory_builder_interface.h  trajectory_node.cc  trajectory_node.h  trajectory_node_test.cc
cartographer/cartographer/mapping/2d/: grid_2d.cc  grid_2d.h  map_limits.h  map_limits_test.cc  probability_grid.cc  probability_grid.h  probability_grid_range_data_inserter_2d.cc  probability_grid_range_data_inserter_2d.h  probability_grid_test.cc  range_data_inserter_2d_test.cc  submap_2d.cc  submap_2d.h  submap_2d_test.cc  xy_index.h  xy_index_test.cc
cartographer/cartographer/mapping/3d/: hybrid_grid.h  range_data_inserter_3d.cc  range_data_inserter_3d.h  range_data_inserter_3d_test.cc  submap_3d.cc  submap_3d.h  submap_3d_test.cc
cartographer/cartographer/mapping/internal/: collated_trajectory_builder.cc  collated_trajectory_builder.h  connected_components.cc  connected_components.h  imu_based_pose_extrapolator.cc  imu_based_pose_extrapolator.h  motion_filter.cc  (+4 more)
cartographer/cartographer/sensor/: compressed_point_cloud.cc  compressed_point_cloud.h  fixed_frame_pose_data.cc  fixed_frame_pose_data.h  imu_data.cc  imu_data.h  landmark_data.cc  landmark_data.h  odometry_data.cc  odometry_data.h  point_cloud.cc  point_cloud.h  range_data.cc  range_data.h  rangefinder_point.h  timed_point_cloud_data.cc  timed_point_cloud_data.h
cartographer/cartographer/transform/: timestamped_transform.cc  timestamped_transform.h  transform.cc  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
cartographer/cartographer_proto/cloud/: map_builder_server_options.proto  map_builder_service.proto
cartographer/cartographer_proto/common/: ceres_solver_options.proto
cartographer/cartographer_proto/ground_truth/: relations.proto
cartographer/cartographer_proto/mapping/: cell_limits_2d.proto  connected_components.proto  grid_2d.proto  grid_2d_options.proto  hybrid_grid.proto  local_trajectory_builder_options_2d.proto  local_trajectory_builder_options_3d.proto  map_builder_options.proto  map_limits.proto  motion_filter_options.proto  normal_estimation_options_2d.proto  pose_extrapolator_options.proto  pose_graph.proto  pose_graph_options.proto  probability_grid.proto  probability_grid_range_data_inserter_options_2d.proto  range_data_inserter_options.proto  range_data_inserter_options_3d.proto  serialization.proto  submap.proto  submap_visualization.proto  submaps_options_2d.proto  submaps_options_3d.proto  trajectory.proto  trajectory_builder_options.proto  trajectory_node_data.proto  tsdf_2d.proto  tsdf_range_data_inserter_options_2d.proto
cartographer/cartographer_proto/sensor/: adaptive_voxel_filter_options.proto  sensor.proto
cartographer/cartographer_proto/transform/: timestamped_transform.proto  transform.proto
cartographer/scripts/: install_cartographer_bazel.sh
cartographer_ros/: CMakeLists.txt
cartographer_ros/include/cartographer_ros/: assets_writer.h  map_builder_bridge.h  node.h  node_options.h  offline_node.h  ros_map_writing_points_processor.h  sensor_bridge.h  trajectory_options.h
cartographer_ros/src/: assets_writer.cpp  map_builder_bridge.cpp  msg_conversion.cpp  node.cpp  offline_node_main.cpp  ros_map_writing_points_processor.cpp  sensor_bridge.cpp
cartographer_ros/src/cartographer_grpc/: offline_node_grpc_main.cpp
cartographer_ros/src/dev/: pbstream_trajectories_to_rosbag_main.cpp  trajectory_comparison_main.cpp
cartographer_rviz/: CMakeLists.txt
docker/: Dockerfile.humble  Dockerfile.jammy  Dockerfile.ros
docs/: CMakeLists.txt
docs/source/: algo_walkthrough.rst  compilation.rst  conf.py  configuration.rst  index.rst
scripts/: build_docker.sh  install.sh  install_abseil.sh  install_cartographer_bazel.sh  install_debs.sh  prepare_workspace.sh
(+144 files in other folders)
